style.css
@font-face {
    font-family: "Roboto";
    src: url(../fonts/Roboto.ttf) format('truetype');
    font-weight: 400;
    font-style: normal;
}

@font-face {
    font-family: "Roboto-Extra-Bold";
    src: url(../fonts/Roboto.ttf) format('truetype');
    font-weight: 800;
    font-style: normal;
}

@font-face {
    font-family: "Roboto-Light-Italic";
    src: url(../fonts/Roboto-Italic.ttf) format('truetype');
    font-weight: 300;
    font-style: italic;
}

:root {
    --main-bg-color: #1F2937;
    --main-txt-color: #F9FAF8;
    --secondary-txt-color: #E5E7EB;
    --action-bg-color: #3882F6;
    --value-txt-color: #4B5563;
    --sign-up-form-bg-color: white;
    --submit-btn-gb: #2563eb;
    --main-txt: 3rem;
    --info-txt: 2.25rem;
    --header-txt: 1.5rem;
    --secondary-txt: 1.125rem;
}

* {
    font-family: "Roboto", sans-serif;
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

body {
    min-height: 100vh;
    display: flex;
    flex-direction: column;
}

header {
    background-color: var(--main-bg-color);
    padding: 2rem 0;
}

.header-container {
    max-width: 1200px;
    margin: 0 auto;
    padding: 0 2rem;
    display: flex;
    justify-content: space-between;
    align-items: center;
}

.logo {
    color: var(--main-txt-color);
    font-size: var(--header-txt);
}

nav ul {
    display: flex;
    list-style: none;
    gap: 2rem;
}

nav a {
    color: var(--secondary-txt-color);
    text-decoration: none;
    font-size: var(--secondary-txt);
}

main {
    flex: 1;
    display: flex;
    flex-direction: column;
    min-height: calc(100vh - 140px);
}

.hero {
    background-color: var(--main-bg-color);
    padding: 2rem 2rem;
    text-align: center;
    color: var(--main-txt-color);
}

.hero h1 {
    font-size: var(--main-txt);
    margin-bottom: 1rem;
}

.hero p {
    font-size: var(--secondary-txt);
    color: var(--secondary-txt-color);
}

.main-content {
    max-width: 1200px;
    margin: 0px auto;
    padding: 0px 2rem;
}

.secondary-content {
    max-width: 850px;
    margin: 0px auto;
    padding: 0px 2rem;
}

.content-container {
    max-width: 1200px;
    margin: 0 auto;
    padding: 4rem 2rem;
}

.story-text {
    text-align: center;
    margin-bottom: 4rem;
}

.story-text h2, .values h2 {
    color: var(--main-bg-color);
    font-size: var(--info-txt);
    margin-bottom: 1rem;
    text-align: center;
}

.story-text p {
    color: var(--main-bg-color);
    font-size: var(--secondary-txt);
    max-width: 800px;
    margin: 0 auto;
}

.values-container {
    display: flex;
    justify-content: space-between;
    gap: 2rem;
    flex-wrap: wrap;
    text-align: center;
}

.value-item {
    flex: 1;
    min-width: 300px;
    padding: 2rem;
    background-color: var(--main-txt-color);
    border-radius: 8px;
    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
}

.value-item h3 {
    color: var(--main-bg-color);
    margin-bottom: 1rem;
}

.value-item p {
    color: var(--value-txt-color);
}

.signUp-container {
    background-color: var(--sign-up-form-bg-color);
    padding: 3rem;
    border-radius: 8px;
    box-shadow: 0 0 10px;
    width: 100%;
    max-width: 500px;
    margin: auto;
    align-self: center;
}

.signUp-container h1{
    text-align: center;
}

.form-group {
    margin-bottom: 1.5rem;
}

label {
    display: block;
    color: var(--main-bg-color);
    margin-bottom: 0.5rem;
    font-weight: bold;
}

input {
    width: 100%;
    padding: 0.8rem;
    border: 2px solid var(--secondary-txt-color);
    border-radius: 4px;
}

input:focus {
    outline: none;
    border-color: var(--action-bg-color);
}

.submit-btn {
    background-color: var(--action-bg-color);
    color: var(--main-txt-color);
    border: none;
    padding: 1rem 2rem;
    border-radius: 8px;
    font-size: var(--secondary-txt);
    cursor: pointer;
    width: 100%;
    margin-top: 1rem;
}

.submit-btn:hover {
    background-color: var(--submit-btn-gb);
}

.testimonials-header {
    text-align: center;
    padding: 3rem 0;
}

.testimonials-header h1 {
    color: var(--main-bg-color);
    font-size: var(--info-txt);
    font-weight: 900;
}

.testimonials-box {
    max-width: 1200px;
    margin: 0 auto;
    padding: 2rem;
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
    gap: 2rem;
}

.testimonial-card {
    background-color: var(--secondary-txt-color);
    padding: 2rem;
    border-radius: 8px;
    flex: 1;
    min-width: 300px;
    max-width: 500px;
}

.testimonial-card .quote {
    color: var(--main-bg-color);
    font-size: var(--info-txt);
    font-style: italic;
    font-weight: 300;
    margin-bottom: 1rem;
}

.testimonial-card .author {
    color: var(--main-bg-color);
    font-weight: bold;
    text-align: right;
}

.cta-section {
    padding: 6rem 0px;
}

.cta-container {
    flex: 1 1 0px;
    border-radius: 8px;
    padding-top: 3rem;
    padding-bottom: 3rem;
    background-color: var(--action-bg-color);
    color: var(--main-txt-color);
}

.cta {
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    align-items: center;
    gap: 20px;
}

.sign-up {
    border: 2px solid;
    border-radius: 0.5rem;
    font-size: 1.125rem;
    cursor: pointer;
    min-width: 8rem;
    min-height: 2rem;
    background-color: var(--action-bg-color);
    color: var(--main-txt-color);
    border-color: var(--main-txt-color);
}

footer {
    background-color: var(--main-bg-color);
    color: var(--main-txt-color);
    padding: 2rem;
    text-align: center;
}

@media (max-width: 768px) {
    .values-container,
    .cta-container {
        flex-direction: column;
    }
    
    .cta-container {
        text-align: center;
        gap: 2rem;
    }

    .testimonial-card {
        flex: 1 1 100%;
    }

    .signUp-container {
        padding: 2rem;
    }
}

